Added possibility finishing a running exercise
